public/css/base.css
/* ... */
.anime .media > button.plus_one:hover {
	color: hsla(0, 0%, 100%, .65);
	background: #888;
}

.anime .media > button.plus_one:active {
	background: #444;
}

/* -----------------------------------------------------------------------------
	Manga-list-specific styles
------------------------------------------------------------------------------*/
.manga .row {
	padding: 1px;
}

.manga .media {
	/* border: 1px solid #ddd; */
	height: 310px;
	margin: 0.25em;
}

.manga .media > .edit_buttons {
	position: absolute;
	top: 86px;
	/* top: calc(50% - 58.5px); */
	top: calc(50% - 22.4px);
	left: 43.5px;
	left: calc(50% - 66.5px);
	z-index: 40;
}

.manga .media > .edit_buttons button {
	border-color: hsla(0, 0%, 100%, .65);
}

.manga .media > .edit_buttons:hover button {
	color: hsla(0, 0%, 100%, .65);
	background: #888;
}

.manga .media > .edit_buttons button:active {
	background: #444;
}

/* -----------------------------------------------------------------------------
	Search page styles
------------------------------------------------------------------------------*/
.media.search > .name {
	background-color: #555;
	background-color: rgba(000, 000, 000, 0.35);
	background-size: cover;
	background-size: contain;
	background-repeat: no-repeat;
}

.media.search > .row {
	z-index: 6;
}

.big-check, .mal-check {
	display: none;
}

.big-check:checked + label {
	transition: .25s ease;
	background: rgba(0, 0, 0, 0.75);
}

.big-check:checked + label:after {
	content: '✓';
	font-size: 15em;
	font-size: 15rem;
	text-align: center;
	color: greenyellow;
	position: absolute;
	top: 147px;
	left: 0;
	height: 100%;
	width: 100%;
	z-index: 5;
}

#series_list article.media {
	position: relative;
}

#series_list .name, #series_list .name label {
	position: absolute;
	display: block;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	vertical-align: middle;
	line-height: 1.25em;
}

#series_list .name small {
	color: #fff;
}

/* ----------------------------------------------------------------------------
	Details page styles
-----------------------------------------------------------------------------*/
.details {
	margin: 1.5rem auto 0 auto;
	padding: 1rem;
	font-size: inherit;
}

.description {
	max-width: 80rem;
}

.fixed {
	max-width: 100rem;
	/* max-width: 80%; */
	margin: 0 auto;
}

.fixed .text {
	max-width: 600px;
}

.details .cover {
	display: block;
	width: 284px;
	/* height: 402px; */
}

.details h2 {
	margin-top: 0;
}

.details .flex > * {
	margin: 1rem;
}

.details .media_details td {
	padding: 0 1.5rem;
}

.details p {
	text-align: justify;
}

.details .media_details td:nth-child(odd) {
	width: 1%;
	white-space: nowrap;
	text-align: right;
}

.details .media_details td:nth-child(even) {
	text-align: left;
}

.character,
.small_character {
	/* background: rgba(0,0,0,0.5); */
	width: 225px;
	height: 350px;
	vertical-align: middle;
	white-space: nowrap;
}

.character:hover .name,
.small_character:hover .name {
	background: rgba(0, 0, 0, 0.8);
}

.small_character a {
	display: inline-block;
	width: 100%;
	height: 100%;
}

.small_character .name,
.character .name {
	position: absolute;
	bottom: 0;
	left: 0;
	z-index: 10;
}

.small_character img,
.character img {
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	z-index: 5;
	width: 100%;
}

.min-table {
	min-width: 0;
	margin-left: 0;
}

aside.info {
	max-width: 390px;
}

aside.info picture, aside.info img {
	display: block;
	margin: 0 auto;
}

/* ----------------------------------------------------------------------------
	User page styles
-----------------------------------------------------------------------------*/
.small_character {
	width: 160px;
	height: 250px;
}

.user-page .media-wrap {
	text-align: left;
}

.media a {
	display: inline-block;
	width: 100%;
	height: 100%;
}

/* ----------------------------------------------------------------------------
	Viewport-based styles
-----------------------------------------------------------------------------*/

@media screen and (max-width: 40em) {
	nav a {
		line-height: 4em;
		line-height: 4rem;
	}

	.media {
		margin: 2px 0;
	}

	main {
		padding: 0 0, 5em 0.5em;
		padding: 0 0.5rem 0.5rem;
	}
}

/* ----------------------------------------------------------------------------
	Images / Logos
-----------------------------------------------------------------------------*/
.streaming-logo {
	width: 50px;
	height: 50px;
	vertical-align: middle;
}

.cover_streaming_link {
	display:none;
}

.media:hover .cover_streaming_link {
	display: block;
}

.cover_streaming_link .streaming-logo {
	width: 20px;
	height: 20px;
	-webkit-filter: drop-shadow(0 -1px 4px #fff);
	filter: drop-shadow(0 -1px 4px #fff);
}

/* ----------------------------------------------------------------------------
	Loading overlay
-----------------------------------------------------------------------------*/
#loading-shadow {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.8);
	z-index: 500;
}

#loading-shadow .loading-wrapper {
	position: fixed;
	z-index: 501;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
}

#loading-shadow .loading-content {
	position: relative;
	color: #fff
}

.loading-content .cssload-inner.cssload-one,
.loading-content .cssload-inner.cssload-two,
.loading-content .cssload-inner.cssload-three {
	border-color: #fff
}

/* ----------------------------------------------------------------------------
CSS Tabs
-----------------------------------------------------------------------------*/
.tabs {
	display: flex;
	flex-wrap: wrap;
	background: #efefef;
	box-shadow: 0 48px 80px -32px rgba(0, 0, 0, 0.3);
	margin-top: 1.5em;
}

.tabs > label {
	border: 1px solid #e5e5e5;
	width: 100%;
	padding: 20px 30px;
	background: #e5e5e5;
	cursor: pointer;
	font-weight: bold;
	font-size: 18px;
	color: #7f7f7f;
	transition: background 0.1s, color 0.1s;
	/* margin-left: 4em; */
}

.tabs > label:hover {
	background: #d8d8d8;
}
/* ... */

